# medicalrag

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  ruff.toml
notebooks/: 01_visualize_graph.ipynb
src/medrag/: config.py
src/medrag/application/chat/: generate_response.py
src/medrag/application/chat/workflow/: chains.py  edges.py  graph.py  nodes.py  state.py  tools.py  utils.py
src/medrag/application/data/: extract.py
src/medrag/application/evaluation/: evaluate.py  generate_dataset.py  metrics.py
src/medrag/application/rag/: embeddings.py  retrievers.py  splitters.py
src/medrag/domain/: entities.py  prompts.py
src/medrag/infrastructure/: api.py  chainlit.py  qdrant.py
test/: test_rag_llm_as_judge.py  test_self_query.py
tools/: evaluate.py  load_data.py
tools/synthea/: synthea.properties
